--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ version: "3"
 services:
   namenode:
     image: bde2020/hadoop-namenode:2.0.0-hadoop3.2.1-java8
+    build:
+      context: namenode
+      dockerfile: Dockerfile
     container_name: namenode
     restart: always
     ports:
@@ -17,6 +20,9 @@ services:
 
   datanode:
     image: bde2020/hadoop-datanode:2.0.0-hadoop3.2.1-java8
+    build:
+      context: datanode
+      dockerfile: Dockerfile
     container_name: datanode
     restart: always
     volumes:
@@ -28,6 +34,9 @@ services:
   
   resourcemanager:
     image: bde2020/hadoop-resourcemanager:2.0.0-hadoop3.2.1-java8
+    build:
+      context: resourcemanager
+      dockerfile: Dockerfile
     container_name: resourcemanager
     restart: always
     environment:
@@ -37,6 +46,9 @@ services:
 
   nodemanager1:
     image: bde2020/hadoop-nodemanager:2.0.0-hadoop3.2.1-java8
+    build:
+      context: nodemanager
+      dockerfile: Dockerfile
     container_name: nodemanager
     restart: always
     environment:
